# chariott

./: Cargo.toml
.devcontainer/: Dockerfile
examples/applications/python-chariott/: README.md  requirements.txt
examples/applications/python-chariott/src/: kv-example.py
examples/applications/python-chariott/src/chariott/common/v1/: common_pb2.py
examples/applications/python-chariott/src/chariott/runtime/v1/: runtime_pb2.py
examples/applications/simple-test-app/: Cargo.toml  README.md
examples/applications/simple-test-app/src/: main.rs
